# toxfs

./: .gitignore  CMakeLists.txt  COPYRIGHT_HEADER.txt  README.md
CMake/: Dependencies.cmake  Flags.cmake  ProjectConfig.cmake
common/: CMakeLists.txt  GenerateVersion.cmake
common/include/toxfs/: exception.hh  logging.hh  message_queue.hh  tox.hh  version.hh
common/include/toxfs/tox/: file_types.hh  file_types_fmt.hh  tox.hh  tox_error.hh  tox_if.hh  tox_types.hh
common/include/toxfs/transfer/: transfer_ctrl.hh
common/include/toxfs/util/: buffer.hh  chunked_progress.hh  compile_utils.hh  filename.hh  message_queue.hh  scope_guard.hh  string_helpers.hh
common/include_private/toxfs_priv/: cmake_version.hh.in
common/include_private/toxfs_priv/tox/: tox_if_convert.hh  tox_if_impl.hh  tox_if_msg.hh  tox_msg_types.hh
common/src/: logging.cc  tox.cc  version.cc
common/src/tox/: tox.cc  tox_error.cc  tox_if_impl.cc
common/src/transfer/: transfer_ctrl.cc
common/src/util/: chunked_progress.cc  string_helpers.cc
toxfsd/: CMakeLists.txt
toxfsd/src/: main.cc
toxfuse/: CMakeLists.txt
toxfuse/src/: main.cc
